--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="iNET VENTURES" />
 <title>6 Effective Digital Marketing Strategies that Help in Achieving your Marketing Goals</title>
 <meta name="description" content="With digital technology and digital media taking the edge in 2022, many organizations, whether small, medium, or large, are achieving their marketing goals through effective digital marketing strategies">
-<link rel="canonical" href="">
+<link rel="canonical" href="https://inetventures.netlify.app/">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="https://storage.googleapis.com/s3-urls/page-5-styles.css" />
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
